{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 405,
  "lineage": "5a31b359-486a-ad07-149c-fb7c8f05a913",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "docker_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/6fb1fdac-61ae-423c-bbd9-e4a355f030ec/resourceGroups/sk-dev-rg/providers/Microsoft.Network/networkInterfaces/sk-dev-docker-nic",
            "internal_domain_name_suffix": "2xoysoum0jou3hxo0ixsw2qm5b.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipcfg",
                "primary": true,
                "private_ip_address": "10.10.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6fb1fdac-61ae-423c-bbd9-e4a355f030ec/resourceGroups/sk-dev-rg/providers/Microsoft.Network/publicIPAddresses/sk-dev-docker-pip",
                "subnet_id": "/subscriptions/6fb1fdac-61ae-423c-bbd9-e4a355f030ec/resourceGroups/sk-dev-rg/providers/Microsoft.Network/virtualNetworks/sk-dev-vnet/subnets/app"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "mac_address": "00-22-48-A3-18-64",
            "name": "sk-dev-docker-nic",
            "private_ip_address": "10.10.1.5",
            "private_ip_addresses": [
              "10.10.1.5"
            ],
            "resource_group_name": "sk-dev-rg",
            "virtual_machine_id": "/subscriptions/6fb1fdac-61ae-423c-bbd9-e4a355f030ec/resourceGroups/sk-dev-rg/providers/Microsoft.Compute/virtualMachines/sk-dev-docker"
          },
          "dependencies": [
            "module.compute.azurerm_public_ip.docker_pip",
            "module.network.azurerm_subnet.subnet_app",
            "module.network.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jenkins_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/6fb1fdac-61ae-423c-bbd9-e4a355f030ec/resourceGroups/sk-dev-rg/providers/Microsoft.Network/networkInterfaces/sk-dev-jenkins-nic",
            "internal_domain_name_suffix": "2xoysoum0jou3hxo0ixsw2qm5b.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipcfg",
                "primary": true,
                "private_ip_address": "10.10.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6fb1fdac-61ae-423c-bbd9-e4a355f030ec/resourceGroups/sk-dev-rg/providers/Microsoft.Network/publicIPAddresses/sk-dev-jenkins-pip",
                "subnet_id": "/subscriptions/6fb1fdac-61ae-423c-bbd9-e4a355f030ec/resourceGroups/sk-dev-rg/providers/Microsoft.Network/virtualNetworks/sk-dev-vnet/subnets/app"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "mac_address": "00-22-48-9C-EF-E7",
            "name": "sk-dev-jenkins-nic",
            "private_ip_address": "10.10.1.4",
            "private_ip_addresses": [
              "10.10.1.4"
            ],
            "resource_group_name": "sk-dev-rg",
            "virtual_machine_id": "/subscriptions/6fb1fdac-61ae-423c-bbd9-e4a355f030ec/resourceGroups/sk-dev-rg/providers/Microsoft.Compute/virtualMachines/sk-dev-jenkins"
          },
          "dependencies": [
            "module.compute.azurerm_public_ip.jenkins_pip",
            "module.network.azurerm_subnet.subnet_app",
            "module.network.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "docker_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6fb1fdac-61ae-423c-bbd9-e4a355f030ec/resourceGroups/sk-dev-rg/providers/Microsoft.Network/networkInterfaces/sk-dev-docker-nic|/subscriptions/6fb1fdac-61ae-423c-bbd9-e4a355f030ec/resourceGroups/sk-dev-rg/providers/Microsoft.Network/networkSecurityGroups/sk-dev-docker-nsg",
            "network_interface_id": "/subscriptions/6fb1fdac-61ae-423c-bbd9-e4a355f030ec/resourceGroups/sk-dev-rg/providers/Microsoft.Network/networkInterfaces/sk-dev-docker-nic",
            "network_security_group_id": "/subscriptions/6fb1fdac-61ae-423c-bbd9-e4a355f030ec/resourceGroups/sk-dev-rg/providers/Microsoft.Network/networkSecurityGroups/sk-dev-docker-nsg"
          },
          "dependencies": [
            "module.compute.azurerm_network_interface.docker_nic",
            "module.compute.azurerm_network_security_group.docker_nsg",
            "module.compute.azurerm_public_ip.docker_pip",
            "module.network.azurerm_subnet.subnet_app",
            "module.network.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "jenkins_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6fb1fdac-61ae-423c-bbd9-e4a355f030ec/resourceGroups/sk-dev-rg/providers/Microsoft.Network/networkInterfaces/sk-dev-jenkins-nic|/subscriptions/6fb1fdac-61ae-423c-bbd9-e4a355f030ec/resourceGroups/sk-dev-rg/providers/Microsoft.Network/networkSecurityGroups/sk-dev-jenkins-nsg",
            "network_interface_id": "/subscriptions/6fb1fdac-61ae-423c-bbd9-e4a355f030ec/resourceGroups/sk-dev-rg/providers/Microsoft.Network/networkInterfaces/sk-dev-jenkins-nic",
            "network_security_group_id": "/subscriptions/6fb1fdac-61ae-423c-bbd9-e4a355f030ec/resourceGroups/sk-dev-rg/providers/Microsoft.Network/networkSecurityGroups/sk-dev-jenkins-nsg"
          },
          "dependencies": [
            "module.compute.azurerm_network_interface.jenkins_nic",
            "module.compute.azurerm_network_security_group.jenkins_nsg",
            "module.compute.azurerm_public_ip.jenkins_pip",
            "module.network.azurerm_subnet.subnet_app",
            "module.network.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "docker_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6fb1fdac-61ae-423c-bbd9-e4a355f030ec/resourceGroups/sk-dev-rg/providers/Microsoft.Network/networkSecurityGroups/sk-dev-docker-nsg",
            "location": "northeurope",
            "name": "sk-dev-docker-nsg",
            "resource_group_name": "sk-dev-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "2375",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "docker-remote",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "0.0.0.0/0"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jenkins_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6fb1fdac-61ae-423c-bbd9-e4a355f030ec/resourceGroups/sk-dev-rg/providers/Microsoft.Network/networkSecurityGroups/sk-dev-jenkins-nsg",
            "location": "northeurope",
            "name": "sk-dev-jenkins-nsg",
            "resource_group_name": "sk-dev-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "0.0.0.0/0"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "jenkins-ui",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "0.0.0.0/0"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "docker_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/6fb1fdac-61ae-423c-bbd9-e4a355f030ec/resourceGroups/sk-dev-rg/providers/Microsoft.Network/publicIPAddresses/sk-dev-docker-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.123.32.80",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "sk-dev-docker-pip",
            "resource_group_name": "sk-dev-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jenkins_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/6fb1fdac-61ae-423c-bbd9-e4a355f030ec/resourceGroups/sk-dev-rg/providers/Microsoft.Network/publicIPAddresses/sk-dev-jenkins-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "68.219.117.71",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "sk-dev-jenkins-pip",
            "resource_group_name": "sk-dev-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/6fb1fdac-61ae-423c-bbd9-e4a355f030ec/resourceGroups/sk-dev-rg/providers/Microsoft.Network/virtualNetworks/sk-dev-vnet/subnets/app",
            "name": "app",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "sk-dev-rg",
            "virtual_network_name": "sk-dev-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3a89dde5-d28c-4e5d-9eee-d22f2b720cf9",
            "id": "/subscriptions/6fb1fdac-61ae-423c-bbd9-e4a355f030ec/resourceGroups/sk-dev-rg/providers/Microsoft.Network/virtualNetworks/sk-dev-vnet",
            "location": "northeurope",
            "name": "sk-dev-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "sk-dev-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.10.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/6fb1fdac-61ae-423c-bbd9-e4a355f030ec/resourceGroups/sk-dev-rg/providers/Microsoft.Network/virtualNetworks/sk-dev-vnet/subnets/app",
                "name": "app",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}